--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="author" content="Sara Cemal">
   <title>JS Drum Kit</title>
   <link rel="stylesheet" href="style.css">
 </head>
